--- a/resource/CSS/style.css
+++ b/resource/CSS/style.css
@@ -20,28 +20,25 @@ body{
 .card img{
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 55%;
-    object-fit: cover;
+    left: 12%;
+    width: 80%;
+    height: 50%;
+    object-fit: contain;
 }
 .sale{
     position: relative;
-    width: 40px;
+    width: 50px;
     height: 20px;
     background: red;
 }
 .sale p{
     display: flex;
-    text-align: center;
-    justify-content: center;
+    /* justify-content: center; */
 }
 .mac{
     position: absolute;
-    top: 400px;
+    top: 400px; 
     left: 600px;
-
-
     line-height: 55px;
 } 
 .mac del {
